--- a/.gitignore
+++ b/.gitignore
@@ -18,16 +18,16 @@ objects/
 testing_folder/
 
 # IDE and editor files
-# .vscode/
-# .idea/
-# .vs/
-# *.suo
-# *.user
-# *.sln
-# *.suo
-# *.vcxproj
-# *.vcxproj.filters
-# *.vcxproj.user
+.vscode/
+.idea/
+.vs/
+*.suo
+*.user
+*.sln
+*.suo
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
 
 # Dependency directories
 lib/
